# refaktoring

./: CMakeLists.txt  Task_4.sln  Task_4.vcxproj  Task_4_test.vcxproj  main_test.cpp  shape.cpp  shape.h
